# langchain_V1_3

./: README.md  langgraph.json  pyproject.toml  run_langgraph_debug.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chroma_db/: chroma.sqlite3
chroma_storage/: chroma.sqlite3
src/: llm_use.py  test2.py
src/agent/: my_llm.py
src/agent/RAG/: rag_chain.py
src/agent/RAG/chat_history/: file_chat_history.py
src/agent/RAG/knowledge/: knowledge_base.py  qdrant_store.py
src/agent/RAG/prompt/: rag_prompt.py
src/agent/RAG/streamlit/: app_file_uploader.py
src/agent/llm/: dev_agent.py  my_agent.py  my_agent_mail.py  sql.py
src/agent/tools/coding_tools/: coding_tool.py
src/agent/tools/eMailTools/: e_mail_tool.py  e_mail_tool_class.py
src/agent/tools/sqltools/: execute_sql_tool.py  table_list.py  table_schema_tool.py  validate_sql_tool.py
src/agent/tools/webtool/: tool_web.py
src/agent/utils/: db_utils.py  log_utils.py
src/test/: 02LangChain阿里通义千问.py  03LongChainOllamaLLM.py  04LingChain阿里通义流失输出.py  05LangChain-Deepseek聊天模型.py  06LangChain阿里向量化.py  07LangChain通用提示词模板.py  08链路调用.py  09链路调用-多个链路.py  10链路调用-自定义函数3.py  11临时会话记忆.py  12长期会话记忆.py  13pypdf 测试.py  14临时向量存储.py  15长期向量存储.py  15长期向量存储02.py  test01.py  with_structured_output_deepseek.py  with_structured_output_oprnai.py  格式输出.py
src/test/chat_history/: user_001
